[metadata]
name = interminal
version = 0.4.0
description = Utility for launching commands in a GUI terminal
long_description = file: README.md
long_description_content_type = text/markdown
author = Christopher Billington
author_email = chrisjbillington@gmail.com
url = https://github.com/chrisjbillington/interminal
project_urls = 
    Source Code=https://github.com/chrisjbillington/interminal
    Download=https://pypi.org/project/interminal/
    Tracker=https://github.com/chrisjbillington/interminal/issues
keywords = logging unix
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
scripts =
    bin/interminal
    bin/inshell
install_requires =
    pexpect
